[project]
name = "noimport"
version = "0.0.1"
description = "A simple package to prevent the abusive use of the `import` statement in Python."
authors = [
    "Andy Khang <andykhang404@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = ">=3.4"
homepage = "https://github.com/AndyKhang404/noimport"
repository = "https://github.com/AndyKhang404/noimport"
documentation = "https://github.com/AndyKhang404/noimport"

keywords = ["no","import","noimport","suicide"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.4",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]